--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sha</groupId>
-	<artifactId>SolidusLabs</artifactId>
+	<artifactId>SolidusLabs-Problem1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SolidusLabs</name>
 	<description>Sha Hash</description>
